--- a/styles/app.css
+++ b/styles/app.css
@@ -1,11 +1,54 @@
-h1 {
-  font-family: "Playfair Display", serif;
-  font-weight: bold;
-  font-style: normal;
+:root {
+  --branding-color: #815f54;
+  --heading-font-family: "Playfair Display", serif;
+  --default-font-family: "Poppins", sans-serif;
+  --secondary-color: #f6f6f6;
 }
 
+body {
+  font-family: var(--default-font-family);
+}
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: var(--heading-font-family);
+  font-weight: bold;
+  color: black;
+}
+
+h1 {
+  font-size: 92px;
+  font-weight: 900;
+}
 p {
-  font-family: "Poppins", sans-serif;
-  font-weight: 500;
-  font-style: normal;
+  font-weight: normal;
+}
+
+.hero {
+  background-color: var(--secondary-color);
+  text-align: center;
+  padding: 160px 20px;
+}
+.hero p {
+  font-size: 24px;
+  opacity: 0.8;
+  color: #272142;
+}
+.hero h2 {
+  font-family: var(--default-font-family);
+  font-weight: 400;
+  font-size: 24px;
+  line-height: 2;
+}
+.btn-branding {
+  background-color: var(--branding-color);
+  border-radius: 4px;
+  color: white;
+  font-size: 18px;
+  line-height: 27px;
+  padding: 15px 30px;
+  text-decoration: none;
 }
