--- a/styles/app.css
+++ b/styles/app.css
@@ -1,8 +1,8 @@
 :root {
   --branding-color: #815f54;
+  --secondary-color: #f6f6f6;
   --heading-font-family: "Playfair Display", serif;
   --default-font-family: "Poppins", sans-serif;
-  --secondary-color: #f6f6f6;
 }
 
 body {
@@ -16,18 +16,23 @@ h5,
 h6 {
   font-family: var(--heading-font-family);
   font-weight: bold;
-  color: #272142;
+  color: black;
 }
 
 h1 {
   font-size: 92px;
-  font-weight: 900;
 }
 h2 {
-  opacity: 0.9;
+  font-size: 64px;
 }
+
 p {
   font-weight: normal;
+  font-size: 16px;
+  line-height: 30px;
+}
+.container {
+  margin: 40px;
 }
 
 .hero {
@@ -36,13 +41,14 @@ p {
   padding: 160px 20px;
 }
 .hero p {
-  font-size: 24px;
+  font-size: 36px;
   opacity: 0.8;
   color: #272142;
 }
 .hero h2 {
   font-family: var(--default-font-family);
   font-weight: 400;
+  opacity: 0.9;
   font-size: 24px;
   line-height: 2;
 }
@@ -54,4 +60,38 @@ p {
   line-height: 27px;
   padding: 15px 30px;
   text-decoration: none;
+}
+.btn-branding-outline {
+  border-radius: 4px;
+  color: var(--branding-color);
+  border: 1px solid var(--branding-color);
+  font-size: 18px;
+  line-height: 27px;
+  padding: 15px 30px;
+  text-decoration: none;
+}
+.line {
+  max-width: 50%;
+  margin: 0 auto;
+}
+.project-description {
+  padding: 100px 60px;
+}
+
+@media (max-width: 900px) {
+  .project-description {
+    text-align: center;
+    padding: 0;
+  }
+
+  .hero {
+    padding: 80px 20px;
+  }
+  .hero p {
+    font-size: 20px;
+  }
+  .hero h2 {
+    font-size: 18px;
+    line-height: 2;
+  }
 }
