--- a/styles/app.css
+++ b/styles/app.css
@@ -50,22 +50,31 @@ p {
   font-size: 24px;
   line-height: 2;
 }
-.about-section {
+.content-container {
   padding: 160px 20px;
 }
-.about-section h1 {
+.content h1 {
   font-size: 48px;
 }
-.about-section h2 {
+.content h2 {
   font-size: 18px;
   font-family: var(--default-font-family);
 }
-.about-section-content {
+.content h3 {
+  font-size: 24px;
+  font-family: var(--default-font-family);
+}
+
+.content p {
+  font-size: 14px;
+}
+
+.content {
   margin: 30px;
 }
-.about-section img {
-  width: 400px;
+.content-container img {
   border-radius: 4px;
+  width: 600px;
 }
 .btn-branding {
   background-color: var(--branding-color);
@@ -95,10 +104,9 @@ p {
 .project-description {
   padding: 100px 60px;
 }
-
 .img-home-page {
-  width: 600px;
   border-radius: 4px;
+  width: 600px;
 }
 
 @media (max-width: 900px) {
@@ -117,14 +125,14 @@ p {
     font-size: 18px;
     line-height: 2;
   }
-  .about-section {
+  .content-container {
     text-align: center;
     padding: 0;
   }
-  .about-section h1 {
+  .content-container h1 {
     font-size: 38px;
   }
-  .about-section img {
+  .content-container img {
     margin: 20px;
     width: 300px;
   }
