--- a/styles/app.css
+++ b/styles/app.css
@@ -26,6 +26,9 @@ h1 {
 h2 {
   font-size: 64px;
 }
+h4 {
+  font-size: 48px;
+}
 
 p {
   font-weight: normal;
@@ -138,7 +141,49 @@ nav li.active a {
   font-weight: 500;
 }
 
+footer {
+  margin: 60px 0;
+}
+footer .contact-box {
+  background-color: var(--secondary-color);
+  padding: 30px 80px;
+  border-radius: 6px;
+}
+footer p {
+  margin: 0;
+}
+footer .email-link {
+  text-decoration: none;
+  font-size: 22px;
+  color: #33332f;
+}
+footer .email-link:hover {
+  color: var(--branding-color);
+  font-size: 23px;
+}
+footer .social-links a {
+  margin: 0 20px;
+  color: var(--branding-color);
+  background-color: var(--secondary-color);
+  padding: 10px 17px;
+  border-radius: 50%;
+  font-size: 22px;
+  transition: all 100ms ease-in-out;
+}
+footer .social-links a:hover {
+  color: white;
+  background-color: var(--branding-color);
+  font-size: 23px;
+}
+
 @media (max-width: 900px) {
+  h4 {
+    font-size: 18px;
+  }
+  .btn-branding {
+    font-size: 14px;
+    padding: 5px 8px;
+  }
   .project-description {
     text-align: center;
     padding: 0;
