--- a/styles/app.css
+++ b/styles/app.css
@@ -87,7 +87,7 @@ p {
   line-height: 27px;
   padding: 15px 30px;
   text-decoration: none;
-  box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+  box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
 }
 .btn-branding-outline {
   border-radius: 4px;
@@ -97,7 +97,7 @@ p {
   line-height: 27px;
   padding: 15px 30px;
   text-decoration: none;
-  box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+  box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
 }
 
 .line {
@@ -148,6 +148,13 @@ footer .contact-box {
   background-color: var(--secondary-color);
   padding: 30px 80px;
   border-radius: 6px;
+  box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
+}
+.contact-me-footer:hover {
+  color: var(--branding-color);
+  background-color: var(--secondary-color);
+  border: 1px solid var(--branding-color);
+  transition: all 200ms ease-in-out;
 }
 footer p {
   margin: 0;
