--- a/styles/app.css
+++ b/styles/app.css
@@ -208,9 +208,17 @@ footer .coded-by a:hover {
   text-decoration: underline;
 }
 
+.about-me p {
+  font-size: 16px;
+}
+.headings {
+  font-size: 16px;
+  font-style: italic;
+}
+
 @media (max-width: 900px) {
   h3 {
-    font-size: 18px;
+    font-size: 17px;
   }
   .btn-branding {
     font-size: 14px;
