--- a/styles/app.css
+++ b/styles/app.css
@@ -213,7 +213,7 @@ footer .coded-by a:hover {
 }
 .headings {
   font-size: 16px;
-  font-style: italic;
+  font-weight: 500;
 }
 
 @media (max-width: 900px) {
